# AutoLab_Annotator

./: .gitignore  README.md  Video_cropping.py  index.html  pyproject.toml  qwen_video_api.py  qwen_video_hf.py
submissions/: electrophoresis_1_Anita_Ghandehari.json  electrophoresis_1_Linh.json  extractdna_1_Zoe_Piran.json  purifydna_1_Anita_Ghandehari.json
video_annotator/: server.py
video_annotator/annotations/: electrophoresis_1.json
video_annotator/static/: index.html
video_annotator_web/: README.md  index.html
video_annotator_web/submissions/: extractdna_1_Anita_Ghandehari.json
video_annotator_web/videos/: electrophoresis_1.csv  extractdna_1.csv  gel_1.csv
videos/: purifydna_1.csv
