[project]
name = "trial1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "openai>=2.31.0",
    "opencv-python>=4.13.0.92",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.5.4",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
